example2/deployment/040-dashboard/030-DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: weather-app
  labels:
    app: weather-app
spec:
  template: 
    metadata:
      labels:
        name: weather-app
        app: weather-app
    spec:
      containers:
        - name: weather-app
          image: weather-app
          ports:
            - containerPort: 8080
              protocol: TCP
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - weather-app
        from:
          kind: ImageStreamTag
          name: weather-app:latest
  strategy: 
    type: Rolling
  replicas: 1
